added instructions file name option

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,9 @@ input_filename = input.jpg
 ### The name of the output image, which previews what the image will look like in Forge.
 output_filename = output.png
 
+### The name of the instructions file, which contains the Forge color name of each pixel.
+instructions_filename = instructions.txt
+
 ### If True, this will process the image without changing its size.
 native_resolution = False
 
