Added instruction modes
Gives the option to include number labels with each color to make it
easier to find

--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,16 @@ output_filename = output.png
 ### The name of the instructions file, which contains the Forge color name of each pixel.
 instructions_filename = instructions.txt
 
+### Adjusts how the instructions are output.
+### 0: Only outputs the names of the colors.
+### 1: Includes the number of the color in Forge's horizontal color picker (White is 1, Gray [10%] is 2, etc).
+###    Makes it easier to find colors on the console version of Halo 5.
+### 2: Includes the column and row numbers of the color in PC Forge's color picker table.
+###    Makes it easier to find colors on the PC version of Halo 5.
+### 3: Like option 0, but if there are multiple identical colors in succession, they aren't combined into a single entry.
+###    Makes things harder. You probably don't want to use this option.
+instructions_mode = 0
+
 ### If True, this will process the image without changing its size.
 native_resolution = False
 
