Added AutoHotKey option

--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,8 @@ instructions_filename = instructions.txt
 ###    Makes it easier to find colors on the PC version of Halo 5.
 ### 3: Like option 0, but if there are multiple identical colors in succession, they aren't combined into a single entry.
 ###    Makes things harder. You probably don't want to use this option.
-instructions_mode = 0
+### 4: Generates an AutoHotKey script that automatically builds the image in Forge.
+instructions_mode = 4
 
 ### If True, this will process the image without changing its size.
 native_resolution = False
