Added AHK script generation

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 
 ### The name of the image file you want to convert.
 ### Make sure it's in the same folder as the script.
-input_filename = input.jpg
+input_filename = 360.png
 
 ### The name of the output image, which previews what the image will look like in Forge.
 output_filename = output.png
@@ -28,7 +28,7 @@ native_resolution = False
 ### is as close to the max resolution as possible without exceeding it.
 ### Keep in mind that Forge's max object count is 1600, but you can achieve a slightly higher
 ### resolution by using a single block for multiple pixels when possible.
-max_resolution = 1600
+max_resolution = 3500
 
 ### If the image is resized, it will use the specified resample mode.
 ### Bicubic should look the best, but if the output isn't satisfactory you could try changing it.
@@ -42,4 +42,4 @@ adjust_for_eyes = True
 
 ### If you want info about the height, width, and resolution of the image, setting this to True
 ### will print it to the console.
-print_info = False
+print_info = True
