Added note that AHK script generation doesn't work

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 
 ### The name of the image file you want to convert.
 ### Make sure it's in the same folder as the script.
-input_filename = 360.png
+input_filename = input.jpg
 
 ### The name of the output image, which previews what the image will look like in Forge.
 output_filename = output.png
@@ -19,6 +19,7 @@ instructions_filename = instructions.txt
 ### 3: Like option 0, but if there are multiple identical colors in succession, they aren't combined into a single entry.
 ###    Makes things harder. You probably don't want to use this option.
 ### 4: Generates an AutoHotKey script that automatically builds the image in Forge.
+###    NOTE: This is still a work in progress. The scripts probably won't work.
 instructions_mode = 4
 
 ### If True, this will process the image without changing its size.
@@ -28,7 +29,7 @@ native_resolution = False
 ### is as close to the max resolution as possible without exceeding it.
 ### Keep in mind that Forge's max object count is 1600, but you can achieve a slightly higher
 ### resolution by using a single block for multiple pixels when possible.
-max_resolution = 3500
+max_resolution = 1600
 
 ### If the image is resized, it will use the specified resample mode.
 ### Bicubic should look the best, but if the output isn't satisfactory you could try changing it.
