Added transparency support

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 
 ### The name of the image file you want to convert.
 ### Make sure it's in the same folder as the script.
-input_filename = input.jpg
+input_filename = input.png
 
 ### The name of the output image, which previews what the image will look like in Forge.
 output_filename = output.png
@@ -27,7 +27,7 @@ native_resolution = False
 
 ### Unless native_resolution is True, this will resize the image so that its resolution
 ### is as close to the max resolution as possible without exceeding it.
-### Keep in mind that Forge's max object count is 1600, but you can achieve a slightly higher
+### Keep in mind that Forge's max object count is 1600, but you can achieve a significantly higher
 ### resolution by using a single block for multiple pixels when possible.
 max_resolution = 1600
 
@@ -44,3 +44,11 @@ adjust_for_eyes = True
 ### If you want info about the height, width, and resolution of the image, setting this to True
 ### will print it to the console.
 print_info = True
+
+
+
+[AHK options]
+### These options only apply if you have instructions_mode set to 4
+
+### Value can be from 0 to 255. If a pixel's alpha is less than or equal to this value, it is excluded.
+transparency_threshold = 0
