--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@ instructions_filename = instructions.txt
 ### 3: Like option 0, but if there are multiple identical colors in succession, they aren't combined into a single entry.
 ###    Makes things harder. You probably don't want to use this option.
 ### 4: Generates an AutoHotKey script that automatically builds the image in Forge.
-###    NOTE: This is still a work in progress. The scripts probably won't work.
+###    There are some additional options for AHK script generation under [AHK options].
 instructions_mode = 4
 
 ### If True, this will process the image without changing its size.
