--- a/config.ini
+++ b/config.ini
@@ -50,5 +50,5 @@ print_info = True
 [AHK options]
 ### These options only apply if you have instructions_mode set to 4
 
-### Value can be from 0 to 255. If a pixel's alpha is less than or equal to this value, it is excluded.
-transparency_threshold = 0
+### Value can be from 1 to 255. If a pixel's alpha is less than this value, it is excluded.
+transparency_threshold = 255
